--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "core-js": "^3.27.2",
         "js-cookie": "^3.0.5",
         "json-bigint": "^1.0.0",
+        "lodash": "^4.17.21",
         "moment": "^2.29.4",
         "pinia": "^2.0.30",
         "postcss-cli": "^11.0.1",
