--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,9 @@
 {
   "appId": "com.aladin.app",
   "appName": "Aladin",
-  "webDir": "dist"
+  "webDir": "dist",
+  "server": {
+    "url": "https://aladinslots.com",
+    "cleartext": true
+  }
 }
