--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "vuebuild": "vue-cli-service build",
     "copy:android": "npx cap copy android",
     "livezip": "cd dist && zip -r ../public/live.zip .",
-    "apk": "npx cap copy android && cd android && ./gradlew assembleRelease && mv app/build/outputs/apk/release/app-release.apk ../public/aladinslots.apk",
+    "apk": "npx cap copy android && cd android && gradlew.bat assembleRelease && move app\\build\\outputs\\apk\\release\\app-release.apk ..\\public\\aladinslots.apk",
     "build": "npm run vuebuild  && npm run apk",
     "lint": "eslint --ext .js,.vue .",
     "lint-fix": "eslint --fix --ext .js,.vue .",
@@ -56,7 +56,9 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.7.1",
+    "patch-package": "^8.0.0",
     "postcss": "^8.5.3",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.4.1",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
